# ezray

./: README.md  pyproject.toml
src/ezray/: __init__.py
src/ezray/api/: optical_system.py
src/ezray/core/: general_ray_tracing.py
src/ezray/examples/: biconvex_lens.py  convexplano_lens.py  cylindrical_lens.py  object_space_telecentric_lens.py
src/ezray/models/: paraxial_model.py  sequential_model.py
src/ezray/systems/: optical_system.py
tests/examples/: test_biconvex_lens.py  test_convexplano_lens.py  test_cylindrical_lens.py  test_object_space_telecentric_lens.py
tests/models/: test_paraxial_model.py  test_sequential_model.py
tests/systems/: test_optical_system.py
