[tool.poetry]
name = "ezray"
version = "0.1.0"
description = "Prototypes and test cases for optical systems design algorithms"
authors = ["Kyle M. Douglass <kyle.m.douglass@gmail.com>"]
license = "BSD3"
readme = "README.md"
packages = [
    { include = "ezray", from = "src" }
]

[tool.poetry.dependencies]
numpy = "*"
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
